<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".transporttelephony.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="phone"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:onClick="onSaveClick"
                />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_to_send"
            />

        <CheckBox
            android:id="@+id/cbText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text"
            android:onClick="onClick"
            />
        <CheckBox
            android:id="@+id/cbVoiceCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/voice_call"
            android:onClick="onClick"
            />


        <Button
            android:id="@+id/btMinimize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minimize"
            android:onClick="onMinimizeClick"
            />




    </LinearLayout>





</LinearLayout>